# drug_response_prediction

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  best_model.pkl  create_mock_data.py  download_and_prepare_data.py  expression_scaler.pkl  feature_selector.pkl  main.py  model_results.csv  pyproject.toml  requirements.txt  run_pipeline.py  selected_genes.pkl  setup.py
.github/workflows/: python-app.yml
app/: dashboard.py
data/: .gitkeep  gdsc_celllines.csv  gdsc_drug_response.csv  gdsc_expression.csv
notebooks/: download_data.py
notebooks/data/: gdsc_celllines.csv  gdsc_drug_response.csv  gdsc_expression.csv
src/: __init__.py  data_preprocessing.py  model_training.py
tests/: test_basic.py
